--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/rrweb@latest/dist/style.css"
+/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Pattern Analyzer</title>
   </head>
   <body class="text-cybergreen">
