Added new session replay

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,9 @@
 <html lang="en" class="bg-black">
   <head>
     <meta charset="UTF-8" />
+    <script>
+  window.__rrweb__ = window.__rrweb__ || {};
+</script>
     <link rel="icon" href="/favicon.ico" />
     <link
   rel="stylesheet"
